apps/monitoring/uptime-kuma/base/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kuma-dashboard-basicauth
  namespace: monitoring
spec:
  basicAuth:
    secret: kuma-dashboard-1password
