apps/monitoring/uptime-kuma/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuma-internal
  labels:
    app: kuma-internal
  annotations:
    tailscale.com/expose: "true"
spec:
  ports:
    - name: web
      protocol: TCP
      port: 3001
      targetPort: 3001
  selector:
    app: kuma
  type: ClusterIP
